--- a/exercises/templates/index.html
+++ b/exercises/templates/index.html
@@ -1,1 +1,15 @@
-<!-- Put the HTML template for your page here! -->
+<!DOCTIPE <!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Basketball</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ url_for('static', filename='style.css') }}">
+    <script src="main.js"></script>
+</head>
+<body>
+    <h1>Basketball</h1>
+<p>Basketball is the best sport because it's the best sport :\</p>
+</body>
+</html>
